--- a/product-detail.html
+++ b/product-detail.html
@@ -40,8 +40,8 @@
                 <input type="number" name="soluong" min="1" max="10" value="1">
             </div>
             <div class="addproduct">
-                <button class="buy">Mua Ngay</button>
-                <button>Thêm Vào Giỏ Hàng</button>
+                <button><b>Mua Ngay</b></button>
+                <button><b>Thêm Vào Giỏ Hàng</b></button>
             </div>
             <div class="textproduct">
                     <p>
