--- a/product-detail.html
+++ b/product-detail.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./public/css/product-detail.css">
+    <link rel="stylesheet" href="./fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -65,6 +66,125 @@
                 </div>
             </div>
         </div>
+        <div class="comment">
+            <p class="name">ĐÁNH GIÁ SẢN PHẨM VÍ NAM PIERRE CARDIN LW-P 157</p>
+            <div class="flex">
+                <p class="danhgia">4
+                    <ul>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-regular fa-star"></i></li>
+                    </ul>
+                </p>
+            </div>
+        </div>
+        <div class="col3">
+            <div class="user">
+                <ul><li><i class="fa-regular fa-user"></i></li></ul>
+                <h4>Dũng</h4>
+            </div>
+            <ul class="star">
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-regular fa-star"></i></li>
+            </ul>
+            <div class="quality">
+            <p>Sản phẩm tốt, chất lượng.</p>
+            </div>
+        </div>
+        <div class="col3">
+            <div class="user">
+                <ul><li><i class="fa-regular fa-user"></i></li></ul>
+                <h4>Dũng</h4>
+            </div>
+            <ul class="star">
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-regular fa-star"></i></li>
+            </ul>
+            <div class="quality">
+            <p>Sản phẩm tốt, chất lượng.</p>
+            </div>
+        </div>
+        <div class="col3">
+            <div class="user">
+                <ul><li><i class="fa-regular fa-user"></i></li></ul>
+                <h4>Dũng</h4>
+            </div>
+            <ul class="star">
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-regular fa-star"></i></li>
+            </ul>
+            <div class="quality">
+            <p>Sản phẩm tốt, chất lượng.</p>
+            </div>
+        </div>
+        <div class="col3">
+            <div class="user">
+                <ul><li><i class="fa-regular fa-user"></i></li></ul>
+                <h4>Dũng</h4>
+            </div>
+            <ul class="star">
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-regular fa-star"></i></li>
+            </ul>
+            <div class="quality">
+            <p>Sản phẩm tốt, chất lượng.</p>
+            </div>
+        </div>
+        <button class="vietdanhgia">Viết đánh giá</button>
+        <hr>
+        <div class="row">
+                <div class="col4">
+                    <img src="./public/img/h10.png" alt="">
+                    <h4 class="name"></h4>
+                    <p>Giá: </p>
+                    <button>Mua ngay</button>
+                    <p class="sohang">Hàng còn: cái</p>
+                </div>
+                <div class="col4">
+                    <img src="./public/img/h10.png" alt="">
+                    <h4 class="name"></h4>
+                    <p>Giá: </p>
+                    <button>Mua ngay</button>
+                    <p class="sohang">Hàng còn: cái</p>
+                </div><div class="col4">
+                    <img src="./public/img/h10.png" alt="">
+                    <h4 class="name"></h4>
+                    <p>Giá: </p>
+                    <button>Mua ngay</button>
+                    <p class="sohang">Hàng còn: cái</p>
+                </div><div class="col4">
+                    <img src="./public/img/h10.png" alt="">
+                    <h4 class="name"></h4>
+                    <p>Giá: </p>
+                    <button>Mua ngay</button>
+                    <p class="sohang">Hàng còn: cái</p>
+                </div><div class="col4">
+                    <img src="./public/img/h10.png" alt="">
+                    <h4 class="name"></h4>
+                    <p>Giá: </p>
+                    <button>Mua ngay</button>
+                    <p class="sohang">Hàng còn: cái</p>
+                </div><div class="col4">
+                    <img src="./public/img/h10.png" alt="">
+                    <h4 class="name"></h4>
+                    <p>Giá: </p>
+                    <button>Mua ngay</button>
+                    <p class="sohang">Hàng còn: cái</p>
+                </div>
     </div>
 </body>
 </html>
